# paypal-rs

./: Cargo.toml
examples/: invoice.rs
src/: client.rs  endpoint.rs
src/api/: invoice.rs  mod.rs  tracking.rs
src/data/: common.rs  invoice.rs  mod.rs  orders.rs  shipment_carrier.rs  tracking.rs
tests/: orders_tests.rs
