[package]
name = "paypal-rs"
version = "0.2.6"
authors = ["Edgar <git@edgarluque.com>", "Kinut <contact@onigiri.lgbt>"]
description = "A library that wraps the paypal api asynchronously."
repository = "https://github.com/edg-l/paypal-rs/"
license = "MIT OR Apache-2.0"
keywords = ["paypal", "paypal-api"]
categories = ["api-bindings", "web-programming::http-client"]
documentation = "https://docs.rs/paypal-rs"
readme = "README.md"
edition = "2024"


[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.12"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3"
base64 = "0.22"
derive_builder = "0.20"
serde_qs = "0.15"

[dev-dependencies]
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
color-eyre = "0.6"
wiremock = "0.6"

[features]
default = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
